--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="home" id="homes">
     <div class="navbar">
-      <img src="/img/ghar.png" alt="" class="ghar" />
+      <img src="./img/ghar.png" alt="" class="ghar" />
       <div class="nav-list">
         <li><a href="#our-service">Services</a></li>
         <li><a href="#about-section">About Us</a></li>
