--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="shortcut icon" href="/img/ghar.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./img/ghar.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/32af3d915c.js" crossorigin="anonymous"></script>
   <title>HomeSweetHome!!!</title>
 </head>
@@ -42,7 +42,7 @@
     </h1>
     <div class="thirdpage">
       <div class="box1">
-        <img src="/img/baby.jpg" alt="">
+        <img src="./img/baby.jpg" alt="">
 
         <h3 class="services-about">One Room Dec.</h3>
         <p class="services-about2">This include decoration like study room,child room,computer setup,studio setup.etc
@@ -53,7 +53,7 @@
 
       </div>
       <div class="box1">
-        <img src="/img/flat.jpg" alt="">
+        <img src="./img/flat.jpg" alt="">
 
         <h3 class="services-about">Single Flat Dec.</h3>
         <p class="services-about2">This include decoration like study room,child room,computer setup,studio setup.etc
@@ -64,7 +64,7 @@
 
       </div>
       <div class="box1">
-        <img src="/img/wholehouse.jpg" alt="">
+        <img src="./img/wholehouse.jpg" alt="">
 
         <h3 class="services-about">Whole House Dec.</h3>
         <p class="services-about2">This include decoration like study room,child room,computer setup,studio setup.etc
@@ -75,7 +75,7 @@
 
       </div>
       <div class="box1">
-        <img src="/img/premium_photo-1664287154461-a6e34aeb043e.avif" alt="">
+        <img src="./img/premium_photo-1664287154461-a6e34aeb043e.avif" alt="">
 
         <h3 class="services-about">Backyard Dec.</h3>
         <p class="services-about2">This include decoration like study room,child room,computer setup,studio setup.etc
@@ -104,7 +104,7 @@
 
 
     <div class="about">
-      <img src="/img/focus (1).png" alt="" class="img" />
+      <img src="./img/focus (1).png" alt="" class="img" />
       <div class="about-a">
         <h2 class="abc">Our Vision</h2>
         <p class="abc">
@@ -118,7 +118,7 @@
       </div>
     </div>
     <div class="about" >
-      <img src="/img/goal (1).png" alt="" class="img" />
+      <img src="./img/goal (1).png" alt="" class="img" />
       <div class="about-a">
         <h2 class="abc">Our Mission</h2>
         <p class="abc">
@@ -193,12 +193,12 @@
 <div class="part">
   <h1 class="party">Our Partners</h1>
   <div class="partners">
-    <div class="img11"><img src="/img/hamrobazar.png" alt=""></div>
-    <div class="img11"><img src="/img/asian-paint-logo.webp" alt=""></div>
-    <div class="img11"><img src="/img/daraz.png" alt=""></div>
-    <div class="img11"><img src="/img/nepatop-logo.png" alt=""></div>
-    <div class="img11"><img src="/img/ikea.jpg" alt=""></div>
-    <div class="img11"><img src="/img/walmartLogo.svg" alt=""></div>
+    <div class="img11"><img src="./img/hamrobazar.png" alt=""></div>
+    <div class="img11"><img src="./img/asian-paint-logo.webp" alt=""></div>
+    <div class="img11"><img src="./img/daraz.png" alt=""></div>
+    <div class="img11"><img src="./img/nepatop-logo.png" alt=""></div>
+    <div class="img11"><img src="./img/ikea.jpg" alt=""></div>
+    <div class="img11"><img src="./img/walmartLogo.svg" alt=""></div>
   </div>
   
 </div>
