--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <b>AVAILABLE SPACE " </b>
         </p>
         <p>Make your Home,sweethome with us!!!</p>
-        <button class="btn"><a href="/signup.html">SUBSCRIBE</a></button>
+        <button class="btn"><a href="./signup.html">SUBSCRIBE</a></button>
         <button class="btn"><a href="#about-section">LEARNMORE</a></button>
       </div>
     </div>
