--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="#our-service">Services</a></li>
         <li><a href="#about-section">About Us</a></li>
         <li><a href="#our-contact">Contact</a></li>
-        <li><a href="/signup.html"><i class="fa-solid fa-right-to-bracket"></i></a></li>
+        <li><a href="./signup.html"><i class="fa-solid fa-right-to-bracket"></i></a></li>
       </div>
     </div>
     <div class="intro">
