--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
 
         <h2>OR</h2>
 
-        <button class="login">Login with Google <img src="/img/google.png" alt=""></button>
+        <button class="login">Login with Google <img src="./img/google.png" alt=""></button>
 
         <h5>Already have an account?</h5>
     </form>
